--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,41 @@
-@charset "utf-8" ;
+.container{
+	margin: 20px;
+}
 
-h1 {
-  color : #02ccba ;
-  background-color : #ffff33 ;
-  text-align: center ;
-  font-size : 100px;
-  
+.item {
+	width: 25px;
+	float: left;
+}
+
+.item-box {
+	height: 100px;
+	margin-bottom: 20px;
+}
+
+.green {
+	background-color: #11D8B3;
+}
+
+.yellow {
+  background-color: #FFD466;
+}
+
+.red {
+  background-color: #ED456D;
+}
+
+.blue {
+  background-color: #3D7DD8;
+}
+
+@media(max-width: 1000px){
+	.item{
+		width: 50%;
+	}
+}
+
+@media(max-width: 670px){
+	.item{
+		width: 100%;
+	}
 }
