--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+	box-sizing: border-box;
+}
+
 .container{
 	margin: 20px;
 }
@@ -5,6 +9,7 @@
 .item {
 	width: 25px;
 	float: left;
+	padding : 0 15px;
 }
 
 .item-box {
