--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,3 +12,10 @@ header {
 	width : 100%;
 	top:0;
 }
+
+.sky-arrow{
+	padding: 100px 100px 0 0;
+	background-image: url(IMG_2645.jpeg);
+	background-size: cover;
+	text-align: center;
+}
