--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,11 +11,10 @@ header {
 	height : 100px;
 	width : 100%;
 	top:0;
+	background-color: yellow
 }
 
 .sky-arrow{
-	padding: 100px 100px 0 0;
-	background-image: url(IMG_2645.jpeg);
-	background-size: cover;
+
 	text-align: center;
 }
