--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,12 @@
 		height : 80%;
 		width : 80%;
 	}
+	.text{
+		text-align : center;
+	}
+	.script{
+		text-align: left;
+	}
 }
 @media (min-width: 670px){
 	.blog{
@@ -20,6 +26,7 @@
 		height : 60%;
 		width : 60%;
 	}
+	
 }
 
 body {
